--- a/index.html
+++ b/index.html
@@ -10,9 +10,17 @@
   	<img src="/asset/menu.svg">
   </div>
 
-  <div class="logo">Logo</div>
-  <div class="search">Searchbox</div>
-  <div class="right-icons">Right icons</div>
+  <div class="logo">
+  	<img src="/asset/youtube.svg">
+  </div>
+  <div class="search">
+  	<input type="text" name="Searchtext" placeholder="Search here">
+  </div>
+  <div class="right-icons">
+  	<img src="/asset/cam.svg">
+  	<img src="/asset/bell.svg">
+  	<img src="/asset/user.svg">
+  </div>
 </header>
 
 <div class="main-container">
