left-nav updated

--- a/index.html
+++ b/index.html
@@ -25,7 +25,35 @@
 
 <div class="main-container">
 
-  <div class="left-nav">Left nav</div>
+  <div class="left-nav">
+  	<div class="first-section">
+  		<a href="#">
+  			<div class="icon-container"><img src="/asset/home.svg"></div>
+  			<span>Home</span>
+  		</a>
+
+  		<a href="#">
+  			<div class="icon-container"><img src="/asset/trending-topic.svg"></div>
+  			<span>Trending</span>
+  		</a>
+
+  		<a href="#">
+  			<div class="icon-container"><img src="/asset/rss-feed-symbol.svg"></div>
+  			<span>Subscriptions</span>
+  		</a>
+
+  		<a href="#">
+  			<div class="icon-container"><img src="/asset/library.svg"></div>
+  			<span>Library</span>
+  		</a>
+
+  		<a href="#">
+  			<div class="icon-container"><img src="/asset/history.svg"></div>
+  			<span>History</span>
+  		</a>
+  	</div>
+
+  </div>
   <div class="right-content">
     <div class="tags">Tags</div>
     <div class="video-tile">Video tiles</div>
