--- a/index.html
+++ b/index.html
@@ -55,7 +55,13 @@
 
   </div>
   <div class="right-content">
-    <div class="tags">Tags</div>
+    <div class="tags">
+    	<div class="chips">music</div>
+    	<div class="chips">nature</div>
+    	<div class="chips">smartphones</div>
+    	<div class="chips">electronics</div>
+    	<div class="chips">ambient-music</div>
+    </div>
     <div class="video-tile">Video tiles</div>
     
   </div>
