--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     	<div class="chips">nature</div>
     	<div class="chips">smartphones</div>
     	<div class="chips">electronics</div>
-    	<div class="chips">ambient-music</div>
+    	<div class="chips">computer</div>
     </div>
     <div class="video-tile">Video tiles</div>
     
