Page tiles-updated

--- a/index.html
+++ b/index.html
@@ -64,9 +64,155 @@
     	<div class="chips">electronics</div>
     	<div class="chips">computer</div>
     </div>
-    <div class="video-tile">Video tiles</div>
-    
-  </div>
+
+
+   
+
+    <div class="video-tile">
+
+    	<!--  First tile content -->
+
+    	<div class="tile-container">
+    		<div class="tile-image">
+    			<img src="/asset/iphone12.jpg">
+    		</div>
+    		<div class="tile-about">
+
+    			<div class="tile-about-image">
+    			</div>
+
+    			<div class="tile-about-description">
+    				<p>iPhone 12 Review: Just Got Real!</p>
+    				<p>7,554,110 views•Oct 26, 2020</p>
+    			</div>
+
+    		</div>
+    	</div>
+
+    	<!--  Second tile content -->
+
+    	<div class="tile-container">
+    		<div class="tile-image">
+    			<img src="/asset/iphone12.jpg">
+    		</div>
+    		<div class="tile-about">
+
+    			<div class="tile-about-image">
+    			</div>
+
+    			<div class="tile-about-description">
+    				<p>iPhone 12 Review: Just Got Real!</p>
+    				<p>7,554,110 views•Oct 26, 2020</p>
+    			</div>
+
+    		</div>
+    	</div>
+
+    	<!--  Third tile content -->
+
+    	<div class="tile-container">
+    		<div class="tile-image">
+    			<img src="/asset/iphone12.jpg">
+    		</div>
+    		<div class="tile-about">
+
+    			<div class="tile-about-image">
+    			</div>
+
+    			<div class="tile-about-description">
+    				<p>iPhone 12 Review: Just Got Real!</p>
+    				<p>7,554,110 views•Oct 26, 2020</p>
+    			</div>
+
+    		</div>
+    	</div>
+
+
+    	<!--  Fourth tile content -->
+
+    	<div class="tile-container">
+    		<div class="tile-image">
+    			<img src="/asset/iphone12.jpg">
+    		</div>
+    		<div class="tile-about">
+
+    			<div class="tile-about-image">
+    			</div>
+
+    			<div class="tile-about-description">
+    				<p>iPhone 12 Review: Just Got Real!</p>
+    				<p>7,554,110 views•Oct 26, 2020</p>
+    			</div>
+
+    		</div>
+    	</div>
+
+
+    		<!--  Fifth tile content -->
+
+    	<div class="tile-container">
+    		<div class="tile-image">
+    			<img src="/asset/iphone12.jpg">
+    		</div>
+    		<div class="tile-about">
+
+    			<div class="tile-about-image">
+    			</div>
+
+    			<div class="tile-about-description">
+    				<p>iPhone 12 Review: Just Got Real!</p>
+    				<p>7,554,110 views•Oct 26, 2020</p>
+    			</div>
+
+    		</div>
+    	</div>
+
+
+    		<!--  Sixth tile content -->
+
+    	<div class="tile-container">
+    		<div class="tile-image">
+    			<img src="/asset/iphone12.jpg">
+    		</div>
+    		<div class="tile-about">
+
+    			<div class="tile-about-image">
+    			</div>
+
+    			<div class="tile-about-description">
+    				<p>iPhone 12 Review: Just Got Real!</p>
+    				<p>7,554,110 views•Oct 26, 2020</p>
+    			</div>
+
+    		</div>
+    	</div>
+
+
+    		<!--  Seventh tile content -->
+
+    	<div class="tile-container">
+    		<div class="tile-image">
+    			<img src="/asset/iphone12.jpg">
+    		</div>
+    		<div class="tile-about">
+
+    			<div class="tile-about-image">
+    			</div>
+
+    			<div class="tile-about-description">
+    				<p>iPhone 12 Review: Just Got Real!</p>
+    				<p>7,554,110 views•Oct 26, 2020</p>
+    			</div>
+
+    		</div>
+    	</div>
+
+
+
+
+
+    </div>
+</div>
 
 </div>
 
