--- a/index.html
+++ b/index.html
@@ -1,220 +1,64 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-	<title>Youtube</title>
-	<link rel="stylesheet" type="text/css" href="y-style.css">
-	<link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Anand</title>
+    <link rel="shortcut icon" type="image/jpg" href="Assets/Logo.svg">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="mediaq.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@0,300;0,400;1,300&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
 </head>
 <body>
-<header>
-  <div class="menu">
-  	<img src="/asset/menu.svg">
+  <div class="wrapper">
+      <header>
+            <nav>
+                <div class="logo"><img src="Assets/Logo.svg" alt="Anand"></div>
+                
+                <ul class="social">
+                    <li><a href="#"> <i class="fab fa-instagram fa-lg"></i></a></li>
+                    <li><a href="#"> <i class="fab fa-linkedin-in fa-lg"></i></a></li>
+                    <li><a href="#"> <i class="fab fa-dribbble fa-lg"></i></a></li>
+                </ul>
+            </nav>
+      </header>
+
+      <!-- Main section -->
+
+      <main>
+          <section class="introduction">
+              <h3 class="intro-style">
+                Anand is a <em>UX designer</em> based in Bangalore, India. He use human-centered design to create digital products
+                and services that are <em>intuitive and accessible.</em>
+                He is currently working to enhance the User experience at HCL Software.
+              </h3>
+            </section>
+          
+
+          <!-- Featured work -->
+
+          <section class="featured-work"><h2>Featured Work</h2></section>
+
+          <section class="projects">
+              <!-- Project 1 -->
+              <div class="project-one">
+                  <h4>Ecomm. Search Tool</h4>
+                  <p>Create AI-powered search & discovery across websites & apps.</p>
+                  <h5>Read more</h5>
+              </div>
+              <!-- Project 2 -->
+              <div class="project-two">
+                <h4>Datum</h4>
+                <p>Machine learning application for Marketing professionals to create campaigns.</p>
+                <h5>Read more</h5>
+              </div>
+          </section>
+      </main>
   </div>
-
-  <div class="logo">
-  	<img src="/asset/youtube.svg">
-  </div>
-  <div class="search">
-  	<input type="text" name="Searchtext" placeholder="Search here">
-  </div>
-  <div class="right-icons">
-  	<img src="/asset/cam.svg">
-  	<img src="/asset/bell.svg">
-  	<img src="/asset/user.svg">
-  </div>
-</header>
-
-<div class="main-container">
-
-  <div class="left-nav">
-  	<div class="first-section">
-  		<a href="#">
-  			<div class="icon-container"><img src="/asset/home.svg"></div>
-  			<span>Home</span>
-  		</a>
-
-  		<a href="#">
-  			<div class="icon-container"><img src="/asset/trending-topic.svg"></div>
-  			<span>Trending</span>
-  		</a>
-
-  		<a href="#">
-  			<div class="icon-container"><img src="/asset/rss-feed-symbol.svg"></div>
-  			<span>Subscriptions</span>
-  		</a>
-
-  		<a href="#">
-  			<div class="icon-container"><img src="/asset/library.svg"></div>
-  			<span>Library</span>
-  		</a>
-
-  		<a href="#">
-  			<div class="icon-container"><img src="/asset/history.svg"></div>
-  			<span>History</span>
-  		</a>
-  	</div>
-
-  </div>
-  <div class="right-content">
-    <div class="tags">
-    	<div class="chips">music</div>
-    	<div class="chips">nature</div>
-    	<div class="chips">smartphones</div>
-    	<div class="chips">electronics</div>
-    	<div class="chips">computer</div>
-    </div>
-
-
-   
-
-    <div class="video-tile">
-
-    	<!--  First tile content -->
-
-    	<div class="tile-container">
-    		<div class="tile-image">
-    			<img src="/asset/iphone12.jpg">
-    		</div>
-    		<div class="tile-about">
-
-    			<div class="tile-about-image">
-    			</div>
-
-    			<div class="tile-about-description">
-    				<p>iPhone 12 Review: Just Got Real!</p>
-    				<p>7,554,110 views•Oct 26, 2020</p>
-    			</div>
-
-    		</div>
-    	</div>
-
-    	<!--  Second tile content -->
-
-    	<div class="tile-container">
-    		<div class="tile-image">
-    			<img src="/asset/iphone12.jpg">
-    		</div>
-    		<div class="tile-about">
-
-    			<div class="tile-about-image">
-    			</div>
-
-    			<div class="tile-about-description">
-    				<p>iPhone 12 Review: Just Got Real!</p>
-    				<p>7,554,110 views•Oct 26, 2020</p>
-    			</div>
-
-    		</div>
-    	</div>
-
-    	<!--  Third tile content -->
-
-    	<div class="tile-container">
-    		<div class="tile-image">
-    			<img src="/asset/iphone12.jpg">
-    		</div>
-    		<div class="tile-about">
-
-    			<div class="tile-about-image">
-    			</div>
-
-    			<div class="tile-about-description">
-    				<p>iPhone 12 Review: Just Got Real!</p>
-    				<p>7,554,110 views•Oct 26, 2020</p>
-    			</div>
-
-    		</div>
-    	</div>
-
-
-    	<!--  Fourth tile content -->
-
-    	<div class="tile-container">
-    		<div class="tile-image">
-    			<img src="/asset/iphone12.jpg">
-    		</div>
-    		<div class="tile-about">
-
-    			<div class="tile-about-image">
-    			</div>
-
-    			<div class="tile-about-description">
-    				<p>iPhone 12 Review: Just Got Real!</p>
-    				<p>7,554,110 views•Oct 26, 2020</p>
-    			</div>
-
-    		</div>
-    	</div>
-
-
-    		<!--  Fifth tile content -->
-
-    	<div class="tile-container">
-    		<div class="tile-image">
-    			<img src="/asset/iphone12.jpg">
-    		</div>
-    		<div class="tile-about">
-
-    			<div class="tile-about-image">
-    			</div>
-
-    			<div class="tile-about-description">
-    				<p>iPhone 12 Review: Just Got Real!</p>
-    				<p>7,554,110 views•Oct 26, 2020</p>
-    			</div>
-
-    		</div>
-    	</div>
-
-
-    		<!--  Sixth tile content -->
-
-    	<div class="tile-container">
-    		<div class="tile-image">
-    			<img src="/asset/iphone12.jpg">
-    		</div>
-    		<div class="tile-about">
-
-    			<div class="tile-about-image">
-    			</div>
-
-    			<div class="tile-about-description">
-    				<p>iPhone 12 Review: Just Got Real!</p>
-    				<p>7,554,110 views•Oct 26, 2020</p>
-    			</div>
-
-    		</div>
-    	</div>
-
-
-    		<!--  Seventh tile content -->
-
-    	<div class="tile-container">
-    		<div class="tile-image">
-    			<img src="/asset/iphone12.jpg">
-    		</div>
-    		<div class="tile-about">
-
-    			<div class="tile-about-image">
-    			</div>
-
-    			<div class="tile-about-description">
-    				<p>iPhone 12 Review: Just Got Real!</p>
-    				<p>7,554,110 views•Oct 26, 2020</p>
-    			</div>
-
-    		</div>
-    	</div>
-
-
-
-
-
-    </div>
-</div>
-
-</div>
-
 </body>
 </html>
